--- a/app/src/main/res/values/attributes.xml
+++ b/app/src/main/res/values/attributes.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="CustomView">
-        <attr name="values_list" format="integer"/>
+        <attr name="line_color" format="color"/>
+        <attr name="date_text_color" format="color"/>
+        <attr name="line_weight" format="dimension"/>
     </declare-styleable>
 </resources>
