--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="custom_view_height">100dp</dimen>
     <dimen name="custom_view_width">200dp</dimen>
+    <dimen name="line_weight">10dp</dimen>
 </resources>
